--- a/rizzoma/package.json
+++ b/rizzoma/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
     "node-static": "^0.7.11",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   }
