--- a/rizzoma/package.json
+++ b/rizzoma/package.json
@@ -4,18 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
-    "serv": "static build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "node-static": "^0.7.11",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
-  }
+  "license": "ISC"
 }
