--- a/rizzoma/package.json
+++ b/rizzoma/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack --watch",
+    "serv": "static build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "node-static": "^0.7.11",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   }
