--- a/rizzoma/package.json
+++ b/rizzoma/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --watch",
-    "serv": "static build"
+    "dev": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
-    "node-static": "^0.7.11",
+    "path": "^0.12.7",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
